Rename CONCAT to STR